--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vu-design/hooks",
+  "name": "@vu-design-plus/hooks",
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
