--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vu-design/utils",
+  "name": "@vu-design-plus/utils",
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
