--- a/packages/theme-chalk/package.json
+++ b/packages/theme-chalk/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vu-design/theme-chalk",
+  "name": "@vu-design-plus/theme-chalk",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
