--- a/packages/vu-design-plus/package.json
+++ b/packages/vu-design-plus/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "vu-design",
-  "version": "1.1.0",
+  "name": "vu-design-plus",
+  "version": "1.0.7",
   "description": "A Component Library for Vue 3",
   "main": "lib/index.js",
   "module": "es/index.js",
-  "homepage": "https://github.com/a572251465/vu-design",
+  "homepage": "https://github.com/a572251465/vu-design-plus",
   "repository": {
     "type": "git",
-    "url": "https://github.com/a572251465/vu-design.git"
+    "url": "https://github.com/a572251465/vu-design-plus.git"
   },
   "bugs": {
-    "url": "https://github.com/a572251465/vu-design/issues"
+    "url": "https://github.com/a572251465/vu-design-plus/issues"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,7 +20,7 @@
     "ui",
     "vue3",
     "vu",
-    "vu-design"
+    "vu-design-plus"
   ],
   "author": "lihh",
   "license": "MIT",
