--- a/story/package.json
+++ b/story/package.json
@@ -8,6 +8,11 @@
   "license": "ISC",
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.4",
+    "@vitejs/plugin-vue-jsx": "^1.3.10",
     "vite": "^2.8.6"
+  },
+  "dependencies": {
+    "vue": "^3.2.33",
+    "vue-router": "^4.0.15"
   }
 }
