--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "strict": true, // 是否启动严格模式
     "skipLibCheck": true // 跳过类库检测
   },
+  "include": ["image.d.ts"],
   "exclude": [
     // 排除掉哪些类库
     "node_modules",
