--- a/story/package.json
+++ b/story/package.json
@@ -2,7 +2,8 @@
   "name": "@vu-design/story",
   "private": true,
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "vite": "^2.8.6"
   },
   "dependencies": {
+    "vu-design-plus": "^1.0.9",
     "vue": "^3.2.33",
     "vue-router": "^4.0.15"
   }
